css/style.css
/*-- NavBar------------------------------*/

.navbar-container {
    position: fixed;
    top: 0;
    left: 0;
    padding-left: 0;
    padding-right: 0;
    z-index: 4;
}


.navbar-bg {
    background-color: rgba(0, 0, 0, 0.0);
    padding-top: 0;
    padding-bottom: 0;
}

.navbar-bg.scrolled {
    background-color: #0f0f0f !important;
    transition: background-color 200ms linear;

}

.nav-item a {
    text-decoration: none;
    color: #f2f2f2;
    font-size: 15px;
    transition: ease-in-out 0.4s;
}

.nav-item a:hover {
    color: #9e0f0f;
}

.nav-toggler-button {
    color: #f2f2f2;
    font-size: 27px;
}





/*-- Landing Page---------------------------------*/

.landing-page-background {
    background: url(../assets/images/landing-bg.png) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100vh;
    position: relative;

}

.background-alpha-04 {
    background: rgba(0, 0, 0, 0.8) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100vh;
    padding: 0px;
    position: relative;


}

.logo {
    height: 30px;
    width: auto;
}

.headers-wrapper {
    height: 100%;
    margin: 0;
    color: #9e0f0f;

}

.span-grey {
    color: #bcbcbc;
}


.slogan {
    color: #bcbcbc;
    font-family: 'PT Serif', serif;
    font-size: 17px;
    margin-bottom: 25px;
}



.continue-wrapper {
    position: absolute;
    bottom: 0;
    text-align: center;
    padding-left: 0;
    padding-right: 0;
    z-index: 1;
    width: 100%;
    color: #f2f2f2;
    font-size: 25px;
}

.continue-wrapper a {
    text-decoration: none;
    color: #f2f2f2;
    transition-duration: 0.4s;
    transition-timing-function: ease-in-out;
}

.continue-wrapper a:hover{
    color: #9e0f0f;
    font-size: 30px;
}

.continue-wrapper p {
    margin: 0;
}



.continue-wrapper p i {
    padding-left: 10px;
    padding-right: 10px;
}

.button-header {
    background-color: rgba(0, 0, 0, 0.7);
    border-color: #bcbcbc;
    transition: ease-in 0.4s;
}


.button-header:hover {
    border-color: #9e0f0f;
    box-shadow: 0px 1px 17px 5px rgba(167, 63, 63, 1);
}

.button-header a {
    color: #bcbcbc;
    text-decoration: none;
}

.button-header a:hover {
    color: #9e0f0f;
}


/*-- Portfolio--------------------------------*/

.portfolio-bg {
    background: url(../assets/images/portfolio-bg.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    padding: 0;
}

.background-alpha-02 {
    background-color: rgba(0, 0, 0, 0.2);
    height: 100%;
    width: 100%;
    position: relative;
}

.imglist {
    text-align: center;
}

.image-portfolio {
    margin: 45px 30px;
    border: solid 1px black;
}

.imglist a img{
     transition: all .5s;
}

.imglist a img:hover{
    transform: scale(1.1);
    box-shadow: 0px 0px 15px #9e0f0f;
}



/*-- Testimonials------------------------------*/

.testimonials-bg {
    background-color: #E6E6E6;
    margin: 0;
    padding: 0;
}

.testimonial-img {
    border-radius: 50%;
    padding: 0;
    border: solid 2px #3a3a3a;
    height: 160px;
    width: 150px;
    position: relative;
}




/*-- Bio---------------------------------*/

.bio-bg {
    background-image: linear-gradient(to bottom right, #161019, #4a1c24);
    padding: 0;
    height: auto;
}

#tj-bio-pic {
    border: solid 1px black;
    position: relative;
    border-radius: 50%;
    margin-top: 20px;
    max-width: 320px;
    max-height: 320px;
    height: 100%;
    width: 100%;
}

#tj-profile-pic-container {
    text-align: center;
}

.bio-text {
    color: #d4d4d4;
    font-family: 'PT Serif', serif;
    margin-top: 80px;
}


.header-social {
    text-align: center;
    padding-top: 5px;
    font-family: 'Crimson Text', serif;
    text-decoration: underline;

}

.social-icons {
    font-size: 35px;
    margin-right: 20px;
    margin-top: 15px;
    margin-bottom: 35px;
    color: #d4d4d4;
}

.bio-href {
    text-align: center;
}


/*-- FAQ-----------------------*/

.faq-container {
    text-align: center;
    margin: 0;
    padding: 0;
}



.faq-bg {
    background-color: #f9f7f7;
    margin: 0;
    -webkit-box-shadow: inset 0px 0px 25px 3px rgba(0,0,0,0.57);
    -moz-box-shadow: inset 0px 0px 25px 3px rgba(0,0,0,0.57);
    box-shadow: inset 0px 0px 25px 3px rgba(0,0,0,0.57);
}

.question-container {
    margin-top: 20px;
    margin-bottom: 25px;
    padding: 0;
}


.faq-question {
    text-align: left;
    background-color: #e8e6e6;
    color: Black;
    border-width: 0px 0px 0px 4px;
    border-style: solid;
    border-color: #a8253a;
    margin: 0;
    font-weight: 400;
}

.faq-answer {
    text-align: left;
    border-width: 0px 0px 0px 4px;
    border-style: solid;
    border-color: #bcbcbc;
    font-size: 18px;
    font-weight: 300;
    margin: 0;
}


.span-question {
    color: #a8253a;
    font-size: 40px;
    padding-right: 16px;
    padding-left: 5px;
    font-weight: 300;
    display: inline;
    position: relative;
}

.span-answer {
    color: #bcbcbc;
    font-size: 40px;
    padding-right: 16px;
    padding-left: 5px;
    display: inline;
    position: relative;
}


.block-divider-faq {
    width: 100%;
    height: 3px;
    border: 0;
    background-color: #898989;
    text-align: center;
    margin-right: 0px;
    padding-right: 0px;
    padding-left: 0px;
}



/*-- Contact-------------------*/

.contact-bg {
    background: url(../assets/images/contact-gb.png) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100vh;
    position: relative;
}

#form-style {
    margin-top: 45px;
    padding-left: 0;
    padding-right: 110px;
}

.form-element-style {
    background-color: #e8e6e6;
    border: solid #8d5510 2px;
}

#exampleFormControlFile1 {
    padding: 0
}

.contact-details{
    display: inline;
    color: #8d5510;
    padding-left: 8px;
}

#span-white{
    color: #d4d4d4
}

.email-details{
    float:left;
    padding-right: 8px;
}
/*-- Locatio & Hours---------------------*/

.location-bg {
    background-color: #151414;
    height: auto;
}

.maps {
    padding-left: 8.333333%;
    padding-right: 8.333333%;
    margin-bottom: 50px;
    width: 100%;
    max-height: 350px;
}

.location-wrapper {
    margin-top: 60px;
    padding-top: 25px;
}

.location-text {
    color: #f52d2d;
    font-family: 'PT Serif', serif;
}

.header-location {
    font-family: 'Crimson Text', serif;
    color: #c5c5c5;
}

.block-divider-location {
    width: 100%;
    height: 3px;
    border: 0;
    background-color: #a8253a;
    text-align: center;
    margin-bottom: 0px;
    margin-top: 0px;

    padding-left: 0px;
}


/*-- Footer--------------------*/

.footer-bg {
    background-color:#ffffff;
    color: #404040;
    -webkit-box-shadow: inset 0px 24px 35px -18px rgba(0,0,0,0.57);
    -moz-box-shadow: inset 0px 24px 35px -18px rgba(0,0,0,0.57);
    box-shadow: inset 0px 24px 35px -18px rgba(0,0,0,0.57);

}

.social-links li a i {
    width: 38px;
    height: 38px;
    line-height: 15px;
    font-size: 20px;
    padding: 12px 0;
    border-radius: 50%;
    text-align: center;
    color: #fafafa;
    background-color: #404040;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background-color: #f52d2d;
}


.logo-wrapper-footer {
    display: flex;
    justify-content: center;
    align-items: center;
}

.daniel-footer {
    position: relative;
    float: right;
}


.tj-footer {
    position: relative;
    float: left;
}

.daniel-instagram-link{
    text-decoration: none;
    color:#a8253a;
}

/*-- Misc----------------------*/

.header {
    padding-top: 6px;
    text-align: center;
    font-family: 'Crimson Text', serif;
    text-decoration: underline;
}

.header-white {
    color: #d4d4d4;
}

.header-black {
    color: #303030;
}

.sub-header-portfolio{
    padding-top: 5px;
    text-align: center;
    font-family: 'Crimson Text', serif;
}
.float-right {
    float: right;
}

.float-left {
    float: left;
}



.row {
    margin: 0;
    padding: 0;
}


.padding-15 {
    padding-left: 15px;

}

.text-yellow {
    color: #8d5510;
}

.vertical-divider{
    width: 3px;
    height: 65px;
    background-color: #A2A2A2
}

/*-- Media Queries----------------*/

@media (max-width: 375px) {
    .navbar-bg {
        background-color: rgba(0, 0, 0, 1.0);
    }

    #form-style {
        margin-top: 50px;
    }
    
   
}



@media (max-width: 768px) {



    #form-style {
        padding: 0;
        margin-top: 100;
    }


    .faq-question {
        font-size: 1.25rem;
    }
    .faq-answer {
        font-size: 15px;
    }

    .location-wrapper {
        padding-top: 0px;
        padding-bottom: 10;
    }

    .location-bg {
        height: auto;
    }
    
    .bio-text {
        margin-top: 15px
    }


}





@media (min-width: 992px) {

    .bio-bg {
        background: url(../assets/images/bio-v2-final.png) no-repeat center center fixed;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
        height: 100vh
    }

   .email-details{
       float:right;
   }
}



@media (max-height:720px) {
     .contact-bg {
     height: auto;
     padding-bottom: 40px;
     }
     
     
}



@media (min-height: 1200px) {


    .contact-bg {
        height: auto;
        background-image: linear-gradient(to bottom right, #000000, #2e2d2d);

    }



    .landing-page-background {
        height: 60vh;
    }

    .background-alpha-04 {
        height: 60vh;
    }
}

